Add AngularJS mobile project

--- a/AngularJS-app/www/templates/start.html
+++ b/AngularJS-app/www/templates/start.html
@@ -135,8 +135,7 @@
             <br/><strong><h4><a href = "#">Sign up now!</a></h4></strong>
             </div>
         </div> 
-        username: admin<br/>
-        password: admin<br/>
+        <h3 style="color:purple">username: admin || password: admin </h3><br/>
         {{username}}
         {{settings}}
         {{checkDetails}}
