--- a/AngularJS-app/www/templates/start.html
+++ b/AngularJS-app/www/templates/start.html
@@ -6,7 +6,7 @@
         <div class = "header text-center">
            
                 <img style="max-width:100%" src="img/myApp.jpg"/>
-                <h4>Lend, Borrow, Grow</h4>
+                <h4>Company Slogan goes here!!</h4>
                     
            
         </div>
