--- a/AngularJS-app/www/templates/menu.html
+++ b/AngularJS-app/www/templates/menu.html
@@ -42,7 +42,7 @@
           Browse
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
-          How it Works
+          Logout!!
         </ion-item>
       </ion-list>
     </ion-content>
